@@ -1,3 +1,8 @@
+2007-08-16  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Projects.Parser/DefaultParserService.cs: Properly handle the
+	  project renamed event.
+
 2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Projects.mdp, Makefile.am,
